ingress/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: demo.nginx.raylayadi.com
    http:
      paths:
      - backend:
          serviceName: nginx-service
          servicePort: 8080
        path: /
